# rlcms

./: .gitignore  404.html  ProjectWorkflow.md  README.md  composite_workflow.ipynb  composite_workflow_class_based.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  template_settings.txt
.github/workflows/: pypi.yml
about/: index.html
cli/: index.html
colab/compositing/: index.html
colab/primitives/: index.html
colab/sampling/: index.html
composites/: index.html
covariates/: index.html
docs/: ProjectWorkflow.md  about.md  cli.md  composites.md  covariates.md  harmonics.md  index.md  primitives.md  sampling.md  utils.md
docs/colab/: compositing.md  primitives.md  sampling.md
docs/stylesheets/: extra.css
examples/: ProjectWorkflow.md  composite_workflow.ipynb  compositing.ipynb  primitives.ipynb
harmonics/: index.html
notebooks/: compositing.ipynb  sampling.ipynb
primitives/: index.html
rlcms/: composites.py  covariates.py  harmonics.py  model_inputs.py  primitives.py  s2process.py  sampling.py  utils.py
rlcms/cli/: composite.py  composite_s2.py
sampling/: index.html
search/: search_index.json
src/: 00sample_pts.py  01composite_s2.py  02train_test.py  03RFprimitives.py  04generate_LC.py
src/rlcms/: __init__.py  composites.py  primitives.py  primitives_classbased.py  sampling.py  utils.py
src/utils/: check_exists.py  exports.py  harmonics.py  primitives.py  (+1 more)
stylesheets/: extra.css
tests/: test_composites.py  test_compositesClassBased.py  test_composites_errors.py  test_composites_merging.py
utils/: index.html
(+7 files in other folders)
